--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,79 @@
-.App {
+
+body {
+  margin: 0;
+  /* removes white border around website*/
+  padding: 0;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+/*------------------------*/
+/*footer*/
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+footer {
+  min-height: 10rem;
+  background-color: grey;
+  color: #ffffff;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  margin-top: 1rem;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+footer p {
+  margin-top: 2rem;
+  margin-left: 7rem;
+  text-align: center;
+}
+
+/*------------------------*/
+
+/*header*/
+.header-menu {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  align-items: center;
+  /*border-bottom: double;*/
+  border-bottom: 1px double black;
+  margin-top: 0;
+  margin-bottom: 1.4rem;
+}
+.header-menu>a,
+.header-menu>Link {
+  text-align: center;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  text-decoration: none;
+  color: black;
+}
+
+.hover-effect:hover {
+  background-color: #f4ce14;
+  transition: 0.25s;
+}
+/*----------------------*/
+
+/*button component*/
+.bluebtn {
+  background-color: rgb(0, 112, 192);
+  border-radius: 7px;
+  font-size: 1rem;
+  margin: 0.5rem;
+  padding: 0.5rem;
+  text-decoration: none;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.greybtn {
+  background-color: rgb(242, 242, 242);
+  text-decoration: none;
+  border-radius: 7px;
+  margin: 0.5rem;
+  padding: 0.5rem;
+  text-decoration: none;
+  color: grey;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/*-------------------*/
+
+.main-btn {
+  margin: 2rem 0rem;
 }
