--- a/src/App.css
+++ b/src/App.css
@@ -19,8 +19,7 @@ footer {
 }
 
 footer p {
-  margin-top: 2rem;
-  margin-left: 7rem;
+  margin: 2rem 2rem 0rem 2rem;
   text-align: center;
 }
 
@@ -49,6 +48,8 @@ footer p {
   background-color: #f4ce14;
   transition: 0.25s;
 }
+
+
 /*----------------------*/
 
 /*button component*/
@@ -72,8 +73,36 @@ footer p {
   color: grey;
 }
 
+.winebtn{
+  background-color: #820000;
+  border-radius: 7px;
+  font-size: 3rem;
+  width: 30rem;
+  height: 4rem;
+  margin: 0.5rem;
+  padding: 0.5rem;
+  text-decoration: none;
+  color: white;
+}
+
 /*-------------------*/
 
+/*home*/
+
+.home-main{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.home-main-btn{
+  display: flex;
+  flex-direction: column;
+}
 .main-btn {
   margin: 2rem 0rem;
+}
+
+.material-symbols-outlined{
+  font-size: 20rem;
 }
